--- a/config.json
+++ b/config.json
@@ -1,71 +1,87 @@
 {
-    "name": "Aluracord - Matrix (Jungle)",
+    "name": "Aluracord - Marvel MCU (Jungle)",
     "theme": {
-      "colors": {
-        "primary": {
-          "050": "#E3F9E5",
-          "100": "#C1EAC5",
-          "200": "#A3D9A5",
-          "300": "#7BC47F",
-          "400": "#57AE5B",
-          "500": "#3F9142",
-          "600": "#2F8132",
-          "700": "#207227",
-          "800": "#0E5814",
-          "900": "#05400A"
-        },
-        "neutrals": {
-          "000": "#FFFFFF",
-          "050": "#F5F7FA",
-          "100": "#E4E7EB",
-          "200": "#CBD2D9",
-          "300": "#9AA5B1",
-          "400": "#52667A",
-          "500": "#313D49",
-          "600": "#29333D",
-          "700": "#212931",
-          "800": "#181F25",
-          "900": "#101418",
-          "999": "#080A0C"
+        "colors": {
+            "marvel": {
+                "050": "#FF99AB",
+                "100": "#FF7086",
+                "200": "#FF4763",
+                "300": "#FF1F40",
+                "400": "#F50025",
+                "500": "#CC001F",
+                "600": "#A30018",
+                "700": "#4F0812",
+                "800": "#52000C",
+                "900": "#290006",
+                "imageBackground": "url(https://primeiraesetimaarte.com.br/wp-content/uploads/2018/03/YPBnXKE.jpg)"
+            },
+            "neutrals": {
+                "000": "#FFFFFF",
+                "050": "#F5F7FA",
+                "100": "#E4E7EB",
+                "200": "#CBD2D9",
+                "300": "#9AA5B1",
+                "400": "#52667A",
+                "500": "#313D49",
+                "600": "#29333D",
+                "700": "#212931",
+                "800": "#181F25",
+                "900": "#101418",
+                "999": "#080A0C"
+            },
+            "ironMan": {
+                "000": "#FFFFFF",
+                "050": "#A30018",
+                "100": "#63000F",
+                "200": "#CC0000",
+                "300": "#8C0000",
+                "400": "#4D0000",
+                "500": "#D3AF37",
+                "600": "#947A26",
+                "700": "#544616",
+                "800": "#FCC200",
+                "900": "#BD9100",
+                "999": "#7D6000",
+                "imageBackground":"url(https://cutewallpaper.org/21/iron-man-logo-wallpaper/Iron-Man-Mask-Minimal-HD-Logo-4k-Wallpapers-Images-.jpg)"
+            }
         }
-      }
     },
     "stickers": [
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_1.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_2.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_3.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_4.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_5.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_6.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_7.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_8.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_9.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_10.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_11.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_12.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_13.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_14.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_15.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_16.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_17.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_18.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_19.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_20.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_21.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_22.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_23.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_24.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_25.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_26.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_27.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_28.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_29.png",
-      "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_30.png",
-      "http://2.bp.blogspot.com/-d21tffsTIQo/U_H9QjC69gI/AAAAAAAAKqM/wnvOyUr6a_I/s1600/Pikachu%2B2.gif",
-      "https://media1.giphy.com/media/BdghqxNFV4efm/200.gif",
-      "https://c.tenor.com/TKpmh4WFEsAAAAAC/alura-gaveta-filmes.gif",
-      "https://i.pinimg.com/originals/0b/1c/23/0b1c2307c83e1ebdeed72e41b9a058ad.gif",
-      "https://c.tenor.com/VylWt5lyjBoAAAAC/omg-yes.gif",
-      "https://i.pinimg.com/originals/96/34/c5/9634c520c9a3cd4e7f23190bb2c96500.gif"
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_1.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_2.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_3.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_4.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_5.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_6.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_7.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_8.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_9.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_10.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_11.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_12.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_13.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_14.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_15.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_16.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_17.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_18.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_19.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_20.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_21.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_22.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_23.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_24.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_25.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_26.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_27.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_28.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_29.png",
+        "https://www.alura.com.br/imersao-react-4/assets/figurinhas/Figurinha_30.png",
+        "http://2.bp.blogspot.com/-d21tffsTIQo/U_H9QjC69gI/AAAAAAAAKqM/wnvOyUr6a_I/s1600/Pikachu%2B2.gif",
+        "https://media1.giphy.com/media/BdghqxNFV4efm/200.gif",
+        "https://c.tenor.com/TKpmh4WFEsAAAAAC/alura-gaveta-filmes.gif",
+        "https://i.pinimg.com/originals/0b/1c/23/0b1c2307c83e1ebdeed72e41b9a058ad.gif",
+        "https://c.tenor.com/VylWt5lyjBoAAAAC/omg-yes.gif",
+        "https://i.pinimg.com/originals/96/34/c5/9634c520c9a3cd4e7f23190bb2c96500.gif"
     ]
-  }
+}
